# demo-iot-platform

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: app.py  ws_client_test.py  ws_utils.py
app/messages/: responses.py
db/: errors.py  manager.py  models.py
devices/: errors.py  manager.py  utils.py
devices/sensors/: sensor.py
devices/switches/: passive_switch.py  switch.py
resources/: README.md  template_database.db
tests/: test_device_manager.py  test_sensor.py  test_switch.py  ws_client_test.py
